subindo git
